--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,5 +1,5 @@
 @media screen and (max-width:425px) {
-    nav {
+    nav, .thumbnail-container,.downloads-container  {
         flex-direction: column;
     }
     .nav-links {
@@ -14,16 +14,15 @@
         width: 85%;
         margin: auto;
     }
+    .btn-go, .btn-signin {
+        margin-left: 0;
+        margin-top: 8px;
+    }
     .banner-img img {
         width: 100%;
         height: 350px;
     }
-    .thumbnail-container {
-        flex-direction: column;
-    }
-    .downloads-container {
-        flex-direction: column;
-    }
+    
     .downloads-texts h1 {
         font-size: 1.8rem;
         width: 100%;
@@ -42,12 +41,23 @@
     .games-category-container {
        
         width: 100%;
+        margin-top: 0;
+        gap: 0;
+    }
+    .category {
+        gap: 0;
     }
     .test {
         margin-left: 0;
     }
     .footer-links {
-       flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: 20% 20% 20%;
+    }
+    .footer-terms {
+        display: grid;
+        grid-template-columns: 35% 25%;
+        gap:15px
     }
     .footer-icons {
         display: grid;
